--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,107 +1,92 @@
-<div class="d-flex justify-content-center align-items-center vh-100">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8">
-          <div class="card shadow-sm p-4 bg-white rounded-3">
-            <div class="text-center mb-4">
-              <img src="assets/logo.png" alt="Logo" class="logo mb-3">
-              <h2 class="text-primary">Register</h2>
-            </div>
-            <form (ngSubmit)="handleSignup(signUpForm)" [formGroup]="signUpForm" >
-              <div class="row">
-                <!-- ============================================FIRST NAME================================================== -->
-                <div class="col-md-6 mb-3">
-                                <label for="first_name" class="form-label">First Name <span
-                                        class="text-danger">*</span></label>
-                                <input type="text" class="form-control" id="first_name" formControlName="first_name"
-                    placeholder="Enter Your First Name" required>
-                  <div *ngIf="signUpForm.get('first_name')?.errors && signUpForm.get('first_name')?.touched">
-                    <p *ngIf="signUpForm.get('first_name')?.getError('required')" style="color: red; font-weight: 400;">First Name is required.</p>
-                  </div>
-                  <p *ngIf="signUpForm.get('first_name')?.getError('pattern')" style="color: red; font-weight: 400;">Names can't have digits</p>
-                </div>
-  
-                <!-- ============================================LAST NAME================================================== -->
-                <div class="col-md-6 mb-3">
-                  <label for="last_name" class="form-label">Last Name <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control" id="last_name" formControlName="last_name"
-                    placeholder="Enter Your Last Name" required>
-                  <div *ngIf="signUpForm.get('last_name')?.errors && signUpForm.get('last_name')?.touched">
-                    <p *ngIf="signUpForm.get('last_name')?.getError('required')" style="color: red; font-weight: 400;">Last Name is required.</p>
-                  </div>
-                  <p *ngIf="signUpForm.get('last_name')?.getError('pattern')" style="color: red; font-weight: 400;">Names can't have digits</p>
-                </div>
-              </div>
-  
-              <!-- ============================================EMAIL================================================== -->
-              <div class="mb-3">
-                <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
-                <input type="email" class="form-control" id="email" formControlName="email"
-                  placeholder="Enter Your Email" required>
-                <div *ngIf="signUpForm.get('email')?.errors && signUpForm.get('email')?.touched">
-                  <p *ngIf="signUpForm.get('email')?.getError('required')" style="color: red; font-weight: 400;">Email is required.</p>
-                </div>
-                <p *ngIf="signUpForm.get('email')?.getError('pattern')" style="color: red; font-weight: 400;">Invalid Email.</p>
-              </div>
-  
-              <!-- ============================================PASSWORD================================================== -->
-              <div class="row">
-                <div class="col-md-6 mb-3">
-                  <label for="password" class="mb-2">Password <span class="star text-danger">*</span></label>
-                  <input id="password" class="form-control mb-1 py-2" type="text" placeholder="Enter Your Password" required formControlName="password">
-                  <div *ngIf="signUpForm.get('password')?.errors && signUpForm.get('password')?.touched" style="margin-top: 0;">
-                    <p *ngIf="signUpForm.get('password')?.getError('required')" style="color: red; font-weight: 400; margin-bottom: 0;">Password is required.</p>
-                  </div>
-                  <p *ngIf="signUpForm.get('password')?.getError('minlength')" style="color: red; font-weight: 400; margin-bottom: 0;">Password must be at least 8 characters.</p>
-                </div>
-  
-                <!-- ============================================CONFIRM PASSWORD================================================== -->
-                <div class="col-md-6 mb-3">
-                  <label for="password_confirmation" class="mb-2">Confirm Password <span class="text-danger">*</span></label>
-                  <input type="text" class="form-control mb-1 py-2" id="password_confirmation" formControlName="password_confirmation" placeholder="Confirm Your Password" required (input)="signUpForm.get('password_confirmation')?.updateValueAndValidity();">
-                  <div *ngIf="signUpForm.get('password_confirmation')?.errors && signUpForm.get('password_confirmation')?.touched" style="margin-top: 0;">
-                    <p *ngIf="signUpForm.get('password_confirmation')?.getError('required')" style="color: red; font-weight: 400; margin-bottom: 0;">Re-Password is required.</p>
-                  </div>
-                  <div *ngIf="signUpForm.get('password_confirmation')?.value && signUpForm.get('password')?.value !== signUpForm.get('password_confirmation')?.value" style="color: red; font-weight: 400; margin-bottom: 0;">
-                    Passwords do not match.
-                  </div>
-                </div>
-              </div>
-  
-              <!-- ============================================PHONE NUMBER================================================== -->
-              <div class="mb-3">
-                <label for="phone" class="form-label">Phone Number <span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="phone" formControlName="phone" placeholder="Enter Your Phone Number" required>
-                <div *ngIf="signUpForm.get('phone')?.errors && signUpForm.get('phone')?.touched">
-                  <p *ngIf="signUpForm.get('phone')?.getError('required')" style="color: red; font-weight: 400;">Phone Number is required.</p>
-                </div>
-                <p *ngIf="signUpForm.get('phone')?.getError('pattern')" style="color: red; font-weight: 400;">Phone Number must be 11 digits.</p>
-              </div>
-  
-              <!-- ============================================YOUR ROLE================================================== -->
-              <div class="mb-4">
-                <label for="role" class="form-label">Your Role <span class="text-danger">*</span></label>
-                <div class="position-relative">
-                  <select class="form-control custom-select" id="role" formControlName="role" required>
-                    <option value="">Select Your Role</option>
-                    <option value="student">Student</option>
-                    <option value="teacher">Teacher</option>
-                  </select>
-                  <i class="fa fa-chevron-down position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);"></i>
-                </div>
-                <div *ngIf="signUpForm.get('role')?.errors && signUpForm.get('role')?.touched">
-                  <p *ngIf="signUpForm.get('role')?.getError('required')" style="color: red; font-weight: 400;">Role is required.</p>
-                </div>
-              </div>
-  
-              <button type="submit" id="id" on class="btn btn-primary w-100 mb-3" [disabled]="signUpForm.invalid">Register</button>
-              <p class="text-center">
-                Already have an account? <a routerLink="/login" class="login">Login</a>
-              </p>
-            </form>
+<section class="center">
+  <form (ngSubmit)="handleSignup(signUpForm)" [formGroup]="signUpForm">
+    <div class="signup-container">
+      <div class="image-container">
+        <img src="assets/logo.png" alt="Logo">
+      </div>
+      <div class="register">Register</div>
+
+      <!-- FirstName -->
+      <div class="row">
+        <div class="flex">
+          <label for="first_name" class="name">First Name <span class="red-star">*</span></label>
+          <input type="text" id="first_name" placeholder="Enter Your First Name" formControlName="first_name" required class="input">
+          <div *ngIf="signUpForm.get('first_name')?.errors && signUpForm.get('first_name')?.touched">
+            <p *ngIf="signUpForm.get('first_name')?.getError('required')" class="red-error">First Name is required.</p>
+          </div>
+          <p *ngIf="signUpForm.get('first_name')?.getError('pattern')" class="red-error">Names can't have digits.</p>
+        </div>
+
+        <!-- LastName -->
+        <div class="flex">
+          <label for="last_name" class="name">Last Name <span class="red-star">*</span></label>
+          <input type="text" id="last_name" placeholder="Enter Your Last Name" formControlName="last_name" required class="input">
+          <div *ngIf="signUpForm.get('last_name')?.errors && signUpForm.get('last_name')?.touched">
+            <p *ngIf="signUpForm.get('last_name')?.getError('required')" class="red-error">Last Name is required.</p>
+          </div>
+          <p *ngIf="signUpForm.get('last_name')?.getError('pattern')" class="red-error">Names can't have digits.</p>
+        </div>
+      </div>
+
+      <!-- Email -->
+      <div class="flex-columm">
+        <label for="email" class="name">Email <span class="red-star">*</span></label>
+        <input id="email" type="email" placeholder="Enter Your Email" required formControlName="email" class="input">
+        <div *ngIf="signUpForm.get('email')?.errors && signUpForm.get('email')?.touched">
+          <p *ngIf="signUpForm.get('email')?.getError('required')" class="red-error">Email is required.</p>
+        </div>
+        <p *ngIf="signUpForm.get('email')?.getError('pattern')" class="red-error">Invalid Email.</p>
+      </div>
+
+      <!-- Password -->
+      <div class="row">
+        <div class="flex">
+          <label for="password" class="name">Password <span class="red-star">*</span></label>
+          <input type="password" id="password" placeholder="Enter Your Password" formControlName="password" required class="input">
+          <div *ngIf="signUpForm.get('password')?.errors && signUpForm.get('password')?.touched">
+            <p *ngIf="signUpForm.get('password')?.getError('required')" class="red-error">Password is required.</p>
+          </div>
+          <p *ngIf="signUpForm.get('password')?.getError('minlength')" class="red-error">Password must be at least 8 characters.</p>
+        </div>
+
+        <!-- Confirm Password -->
+        <div class="flex">
+          <label for="password_confirmation" class="name">Confirm Password <span class="red-star">*</span></label>
+          <input type="password" id="password_confirmation" placeholder="Confirm Your Password" formControlName="password_confirmation" required class="input">
+          <div *ngIf="signUpForm.get('password_confirmation')?.errors && signUpForm.get('password_confirmation')?.touched">
+            <p *ngIf="signUpForm.get('password_confirmation')?.getError('required')" class="red-error">Re-Password is required.</p>
+          </div>
+          <div *ngIf="signUpForm.get('password_confirmation')?.value && signUpForm.get('password')?.value !== signUpForm.get('password_confirmation')?.value" class="red-error">
+            Passwords do not match.
           </div>
         </div>
       </div>
+
+      <!-- Phone -->
+      <div class="flex-columm">
+        <label for="phone" class="name">Phone Number <span class="red-star">*</span></label>
+        <input id="phone" type="text" placeholder="Enter Your Phone Number" required formControlName="phone" class="input">
+        <div *ngIf="signUpForm.get('phone')?.errors && signUpForm.get('phone')?.touched">
+          <p *ngIf="signUpForm.get('phone')?.getError('required')" class="red-error">Phone Number is required.</p>
+        </div>
+        <p *ngIf="signUpForm.get('phone')?.getError('pattern')" class="red-error">Phone Number must be 11 digits.</p>
+      </div>
+
+      <!-- Role -->
+      <div class="flex-columm">
+        <label for="role" class="your-role">Your Role <span class="red-star">*</span></label>
+        <select class="input" id="role" formControlName="role" required>
+          <option value="">Select Your Role</option>
+          <option value="student">Student</option>
+          <option value="teacher">Teacher</option>
+        </select>
+        <div *ngIf="signUpForm.get('role')?.errors && signUpForm.get('role')?.touched">
+          <p *ngIf="signUpForm.get('role')?.getError('required')" class="red-error">Role is required.</p>
+        </div>
+      </div>
+
+      <button type="submit" class="button" [disabled]="signUpForm.invalid">Register</button>
+      <p>Already have an account? <a routerLink="/login">Login</a></p>
     </div>
-  </div>
-  
+  </form>
+</section>
