--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,33 @@
-<section class="d-flex justify-content-center align-items-center vh-100">
-    <form (ngSubmit)="handleLogin(loginForm)" class="login container shadow rounded p-4 bg-white" action=""
-        [formGroup]="loginForm">
-        <img class="logo d-block mx-auto mb-3" src="assets/logo.png" alt="logo">
-        <h2 class="text-center loginword mb-4">Login</h2>
-<!-- ============================================EMAIL================================================== -->
-<label for="email" class="mb-2">Email <span class="star text-danger">*</span></label>
-<input id="email" class="form-control mb-2 py-2" type="email" placeholder="Enter Your Email" required
-    formControlName="email">
-<div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched">
-    <p *ngIf="loginForm.get('email')?.getError('required')" style="color: red; font-weight: 400; margin-top: 0; margin-bottom: 0;">Email is
-        required.</p>
-</div>
-<p *ngIf="loginForm.get('email')?.getError('pattern')" style="color: red; font-weight: 400; margin-top: 0; margin-bottom: 0;">Invalid
-    Email.</p>
-<!-- ==================================================================================================== -->
-<!-- ============================================PASSWORD================================================ -->
-<label for="password" class="mb-2">Password <span class="star text-danger">*</span></label>
-<input id="password" class="form-control mb-2 py-2" type="password" placeholder="Enter Your Password" required
-    formControlName="password" >
-<div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched">
-    <p *ngIf="loginForm.get('password')?.getError('required')" style="color: red; font-weight: 400; margin-top: 0; margin-bottom: 0;">Password is
-        required.</p>
-</div>
-<p *ngIf="loginForm.get('password')?.getError('minlength')" style="color: red; font-weight: 400; margin-top: 0; margin-bottom: 0;">Minlength is
-    8.</p>
-<!-- ==================================================================================================== -->
-<button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary w-100 mb-4 py-2" style="margin-top: 20px;">Login</button>
-<p class="text-center">Don't have an account?
-    <a class="register-link" routerLink="/signup">Register</a>
-</p>
+<section class="center">
+    <form (ngSubmit)="handleLogin(loginForm)" [formGroup]="loginForm">
+        <div class="login-container">
+            <div class="image-container">
+                <img src="assets/logo.png" alt="Logo">
+            </div>
+            <div class="login">Login</div>
+
+            <!-- ==================================================Email===================================== -->
+            <label for="email" class="mb-2">Email <span class="red-star">*</span></label>
+            <input id="email" type="email" placeholder="Enter Your Email" required formControlName="email"
+                class="input">
+            <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched">
+                <p *ngIf="loginForm.get('email')?.getError('required')" class="red-error">Email is required.</p>
+            </div>
+            <p *ngIf="loginForm.get('email')?.getError('pattern')" class="red-error">Invalid Email.</p>
+
+            <!-- ==================================================Password===================================== -->
+            <label for="password" class="mb-2">Password <span class="red-star">*</span></label>
+            <input id="password" type="password" placeholder="Enter Your Password" required formControlName="password"
+                class="input">
+            <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched">
+                <p *ngIf="loginForm.get('password')?.getError('required')" class="red-error">Password is required.</p>
+            </div>
+            <p *ngIf="loginForm.get('password')?.getError('minlength')" class="red-error">Password must be at least 8
+                characters.</p>
+
+            <!-- ==================================================Login===================================== -->
+            <button [disabled]="loginForm.invalid" type="submit" class="button">Login</button>
+            <p>Don't have an account? <a routerLink="/signup">Register</a></p>
+        </div>
+    </form>
+</section>
