Enhance User Authentication: Redirect Teacher on Login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <section class="center">
-    <form (ngSubmit)="handleLogin(loginForm)" [formGroup]="loginForm">
+<form (ngSubmit)="handleLogin()" [formGroup]="loginForm">
         <div class="login-container">
             <div class="image-container">
                 <img src="assets/logo.png" alt="Logo">
