--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <section class="center">
-<form (ngSubmit)="handleLogin()" [formGroup]="loginForm">
+    <form (ngSubmit)="handleLogin()" [formGroup]="loginForm">
         <div class="login-container">
             <div class="image-container">
                 <img src="assets/logo.png" alt="Logo">
@@ -11,22 +11,36 @@
             <input id="email" type="email" placeholder="Enter Your Email" required formControlName="email"
                 class="input">
             <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched">
-                <p *ngIf="loginForm.get('email')?.getError('required')" class="red-error">Email is required.</p>
+                <p *ngIf="loginForm.get('email')?.getError('required')" class="red-error">
+                    &#10008; Email is required.
+                </p>
+                <p *ngIf="loginForm.get('email')?.getError('pattern')" class="red-error">
+                    &#10008; Invalid Email format.
+                </p>
             </div>
-            <p *ngIf="loginForm.get('email')?.getError('pattern')" class="red-error">Invalid Email.</p>
+            <p *ngIf="loginForm.get('email')?.valid && loginForm.get('email')?.touched" class="green-check">
+                &#10004; Email is valid.
+            </p>
 
             <!-- ==================================================Password===================================== -->
             <label for="password" class="mb-2">Password <span class="red-star">*</span></label>
             <input id="password" type="password" placeholder="Enter Your Password" required formControlName="password"
                 class="input">
             <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched">
-                <p *ngIf="loginForm.get('password')?.getError('required')" class="red-error">Password is required.</p>
+                <p *ngIf="loginForm.get('password')?.getError('required')" class="red-error">
+                    &#10008; Password is required.
+                </p>
+                <p class="red-error">
+                    &#10008; Password must meet the required format.
+                </p>
             </div>
-            <p *ngIf="loginForm.get('password')?.getError('minlength')" class="red-error">Password must be at least 8
-                characters.</p>
 
-            <!-- ==================================================Login===================================== -->
-            <button [disabled]="loginForm.invalid" type="submit" class="button">Login</button>
+
+            <!-- ================================================================================================== -->
+            <button [disabled]="loginForm.invalid" type="submit"
+                [ngClass]="{'button': true, 'button-filled': loginForm.valid}">
+                Login
+            </button>
             <p>Don't have an account? <a routerLink="/signup">Register</a></p>
         </div>
     </form>
