--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -108,24 +108,45 @@ a{
     margin-left: 5px;   
 }
 
-@media (max-width: 840px) {
+.green-check {
+    color: green; 
+    text-align: left; 
+    margin-left: 5px; 
+}
+
+.button-filled {
+    background-color: rgba(17, 0, 255, 0.9); 
+}
+
+
+@media (max-width: 850px) {
     .signup-container {
-        width: 100%;
-        padding: 20px;
-        box-shadow: none;
+        width: 80%;
+        padding: 20px 15px;
         border-radius: 0;
+        margin: 0 auto;
+        background-color: white;
+        box-shadow: 0 4px 10px rgba(115, 115, 115, 0.381);
     }
 
-    .flex, .flex-columm { 
-        flex: 0 0 100%;
+    .flex, .flex-column {
+        flex: 1 0 100%;
         max-width: 100%;
-        margin-right: 0;
-        margin-left: 0;
+        margin: 0 0 15px 0;
     }
 
     .button {
         width: 100%;
-        margin: 0;
-        padding: 10px;
+        margin-top: 10px;
+        padding: 12px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .button-filled {
+        background-color: rgba(17, 0, 255, 0.9); 
     }
 }
