Course addition feature and homepage creation

--- a/src/app/sidebar-item/home/home.component.html
+++ b/src/app/sidebar-item/home/home.component.html
@@ -1,1 +1,32 @@
-<p>home works!</p>
+
+<div class="main-content">
+    <main class="content">
+        <div class="dashboard-cards">
+            <div class="card blue">
+                <h3>+100 Students</h3>
+            </div>
+            <div class="card teal">
+                <h3>6.8 Average Mark</h3>
+            </div>
+            <div class="card pink">
+                <h3>14% Underperforming Students</h3>
+            </div>
+        </div>
+
+        <div class="statistic-chart">
+            <h3>Statistic</h3>
+            <canvas id="myChart"></canvas>
+        </div>
+
+        <div class="your-uploads">
+            <h3>Your Uploads</h3>
+            <ul>
+                <li>English-for-beginner.pdf</li>
+                <li>Lessons-Schedule.xls</li>
+                <li>ClassA-Exams.docx</li>
+            </ul>
+        </div>
+    </main>
+
+  
+</div>
