--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,14 +1,12 @@
 <div class="sidebar">
-    <h2>SMARTED</h2>
-    <nav>
-        <div class="sidebar">
-            <ul>
-              <li><a routerLink="home">Home</a></li>
-              <li><a routerLink="classes">Classes</a></li>
-              <li><a routerLink="courses">Courses</a></li>
-              <li><a routerLink="calendar">Calendar</a></li>
-            </ul>
-          </div>
-    </nav>
-    <button (click)="logout()">Logout</button>
-  </div>
+  <h2>SMARTED</h2>
+  <nav>
+    <ul>
+      <li><a routerLink="home">Home</a></li>
+      <li><a routerLink="classes">Classes</a></li>
+      <li><a routerLink="courses">Courses</a></li>
+      <li><a routerLink="calendar">Calendar</a></li>
+    </ul>
+  </nav>
+  <button class="logout-btn" (click)="logout()">Logout</button>
+</div>
