--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -1,4 +1,6 @@
 <app-sidebar></app-sidebar>
 <div class="main-content">
+  <app-nav-bar></app-nav-bar>
   <router-outlet></router-outlet> 
 </div>
+<app-right-sidebar></app-right-sidebar>
