--- a/src/app/sidebar-item/courses/courses.component.html
+++ b/src/app/sidebar-item/courses/courses.component.html
@@ -1,1 +1,73 @@
-<p>courses works!</p>
+<div class="mt-5">
+    <div class="d-flex justify-content-end">
+      <button class="btn text-white rounded-5 mb-3" data-bs-toggle="modal" data-bs-target="#addCourseModal">
+        + Add New
+      </button>
+    </div>
+  
+    <div class="modal fade" id="addCourseModal" tabindex="-1" aria-labelledby="addCourseModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addCourseModalLabel">Add New Course</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="newCourseForm" (ngSubmit)="addCourse()">
+              <div class="mb-3">
+                <label for="courseName" class="form-label">Course Name</label>
+                <input type="text" id="courseName" class="form-control" formControlName="name" required>
+              </div>
+              <div class="mb-3">
+                <label for="courseDuration" class="form-label">Duration</label>
+                <input type="text" id="courseDuration" class="form-control" formControlName="duration" required>
+              </div>
+              <div class="mb-3">
+                <label for="courseLevel" class="form-label">Level</label>
+                <input type="text" id="courseLevel" class="form-control" formControlName="level" required>
+              </div>
+              <div class="mb-3">
+                <label for="courseSemester" class="form-label">Semester</label>
+                <input type="text" id="courseSemester" class="form-control" formControlName="semester" required>
+              </div>
+              <div class="mb-3">
+                <label for="courseDescription" class="form-label">Description</label>
+                <textarea id="courseDescription" class="form-control" formControlName="description" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Add Course</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="scrollable">
+      <table class="table table-striped rounded-3">
+        <thead>
+          <tr>
+            <th scope="col">Course Name</th>
+            <th scope="col">Duration</th>
+            <th scope="col">Level</th>
+            <th scope="col">Semester</th>
+            <th scope="col">Description</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let i of courses">
+            <td>{{ i.name }}</td>
+            <td>{{ i.duration }}</td>
+            <td>{{ i.level }}</td>
+            <td>{{ i.semester }}</td>
+            <td>{{ i.description }}</td>
+            <td>
+                
+              <button class="btn btn-danger" (click)="deleteCourse(i.id)">Delete</button>
+              <button class="btn btn-warning" (click)="editCourse(i.id)">Edit</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
