--- a/src/app/sidebar-item/courses/courses.component.html
+++ b/src/app/sidebar-item/courses/courses.component.html
@@ -1,9 +1,10 @@
 <div class="mt-5">
-    <div class="d-flex justify-content-end">
-      <button class="btn text-white rounded-5 mb-3" data-bs-toggle="modal" data-bs-target="#addCourseModal">
-        + Add New
-      </button>
-    </div>
+  <div class="d-flex justify-content-end">
+  <button class="btn btn-primary text-white rounded-5 mb-3" data-bs-toggle="modal" data-bs-target="#addCourseModal">
+    + Add New
+  </button>
+</div>
+
   
     <div class="modal fade" id="addCourseModal" tabindex="-1" aria-labelledby="addCourseModalLabel" aria-hidden="true">
       <div class="modal-dialog">
